syntax = "proto3";

package nebula.id.v1;

option go_package = "nebula/id/v1;idv1";

service NebulaIdService {
  rpc Generate(GenerateRequest) returns (GenerateResponse);
  rpc BatchGenerate(BatchGenerateRequest) returns (BatchGenerateResponse);
  rpc Parse(ParseRequest) returns (ParseResponse);
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
  rpc BatchGenerateStream(stream BatchGenerateStreamRequest) returns (stream BatchGenerateStreamResponse);
}

message GenerateRequest {
  string namespace = 1;
  string tag = 2;
  map<string, string> metadata = 3;
}

message GenerateResponse {
  string id = 1;
  int64 timestamp = 2;
  int32 sequence = 3;
  int32 worker_id = 4;
  string algorithm = 5;
}

message BatchGenerateRequest {
  string namespace = 1;
  string tag = 2;
  int32 count = 3;
  map<string, string> metadata = 4;
}

message BatchGenerateResponse {
  repeated GenerateResponse ids = 1;
}

message BatchGenerateStreamRequest {
  string namespace = 1;
  string tag = 2;
  int32 count = 3;
  map<string, string> metadata = 4;
}

message BatchGenerateStreamResponse {
  GenerateResponse id = 1;
}

message ParseRequest {
  string id = 1;
}

message ParseResponse {
  string id = 1;
  int64 timestamp = 2;
  int32 sequence = 3;
  int32 worker_id = 4;
  string algorithm = 5;
  map<string, string> metadata = 6;
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}
